Show link to the page.

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,8 @@
       <h1>Hello, <span class="fingerprint__name"></span>!</h1>
       <h3 class="fingerprint__title">Your fingerprint is:</h3>
       <span class="fingerprint__value"></span>
+      <h3 class="fingerprint__title">Now open this page in incognito mode:</h3>
+      <h3 class="fingerprint__url"></h3>
     </div>
 
     <form id="form" method="POST">
