Add gif in incognito mode.

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
     <div id="loader" class="show"></div>
 
     <div id="fingerprint">
+      <div class="fingerprint__image"></div>
       <h1>Hello, <span class="fingerprint__name"></span>!</h1>
       <h3 class="fingerprint__title">Your fingerprint is:</h3>
       <span class="fingerprint__value"></span>
