Adjust firebase for prod.

--- a/src/index.html
+++ b/src/index.html
@@ -20,16 +20,14 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
   <link rel="stylesheet" href="./styles.styl">
-  <script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.4.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.4.2/firebase-firestore.js"></script>
   <script>
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyBVm-RekZuQVWem8EZtVXHkk69BPOPMaVk",
         authDomain: "bbrowser-fingerprint.firebaseapp.com",
-        databaseURL: "https://bbrowser-fingerprint.firebaseio.com",
         projectId: "bbrowser-fingerprint",
-        storageBucket: "bbrowser-fingerprint.appspot.com",
-        messagingSenderId: "818639498049"
       };
       firebase.initializeApp(config);
     </script>
